if(NOT EMSCRIPTEN)
    add_subdirectory(_testbed)
endif()

add_subdirectory(AniTexEx)
add_subdirectory(BackgroundEx)
add_subdirectory(CanvasEx)
add_subdirectory(ClippingEx)
add_subdirectory(ControllerEx)
add_subdirectory(HtmlEx)
add_subdirectory(ImageFilterEx)
add_subdirectory(LightingSystemEx)
add_subdirectory(ParticleSystemEx)
add_subdirectory(PathfindingEx)
add_subdirectory(PointCloudEx)
add_subdirectory(PhysicsEx)
add_subdirectory(RayEx)
add_subdirectory(RngEx)
add_subdirectory(SoundFontEx)
add_subdirectory(SoundGeneratorEx)
add_subdirectory(StencilEx)
add_subdirectory(TextEx)
add_subdirectory(TileMapEx)
add_subdirectory(TweenEx)
add_subdirectory(UIEx)